added: AuthController and JWT authentication
